# Gamification-for-factory

./: .commit-template.txt  .gitignore  .mcp.json  .roomodes  Basic-design-specifications.prompt.yml  CLAUDE.md  README.md  add_to_dockerfile.txt  api_test.py  build_android.bat  build_android.sh  final_test.py  simple_test.py  test_api.json  test_api.py  test_api_request.py  test_database_api.py  test_date_formats.py  test_fixed_api.py  test_get_events.py  test_join_event.json  test_join_event_no_motivation.json  test_request.json  test_request_data.json  test_simple.json
dev/server/backend/api/: .env  Dockerfile  config_paths.py  main.py  pyproject.toml  requirements.txt  test_api.py  test_api_function.py  test_database.py  test_gemini.py  test_get_reviews.py  test_review_api_fixed.py  test_review_api_simple.py  test_review_crud.py  test_schema_conversion.py  test_single_review.py
dev/server/backend/api/routers/: README.md  applicant.py  application.py  applications.py  event.py  get_events.py  join_event.py  memo.md  review.py  reviews.py
dev/server/backend/api/routers/api/: prefix.py
dev/server/backend/api/routers/debug/: __init__.py  error_report.py
dev/server/backend/api/routers/demo/: get_events.py  join_event.py
dev/server/backend/api/routers/func/: ai-review.py  ai_review.py
dev/server/backend/api/routers/sys/: health.py  root.py
dev/server/backend/api/src/: crud.py  database.py  db_migration.py  models.py
dev/server/backend/api/src/classes/: db_connector.py
dev/server/backend/api/src/db/: models.py
dev/server/backend/api/src/demo/: __init__.py  (+1 more)
(+299 files in other folders)
